fix: all company line, align update

--- a/src/pages/CompareStatus/CompareStatus.module.css
+++ b/src/pages/CompareStatus/CompareStatus.module.css
@@ -117,6 +117,7 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   line-height: 32px;
+  text-align: left;
 }
 
 .category_category {
@@ -146,5 +147,5 @@
 
 .category_body {
   background-color: #212121;
-  border-bottom: 1px solid #4b4b4b;
+  border-bottom: 1px solid #4b4b4b !important;
 }
