--- a/src/pages/StartupList/StartupList.module.css
+++ b/src/pages/StartupList/StartupList.module.css
@@ -234,10 +234,9 @@
   line-height: 16.71px;
   width: 304px;
   height: 39px;
-  gap: 10px;
   align-items: center;
-  justify-content: center;
   display: flex;
+  text-align: left;
 }
 
 .category_category,
@@ -264,6 +263,7 @@
   align-items: center;
   justify-content: center;
   display: flex;
+  border-bottom: none;
 }
 
 .category_body > .category_company_info {
@@ -281,5 +281,5 @@
 
 .category_body {
   background-color: #212121;
-  border-bottom: 1px solid #4b4b4b;
+  border-bottom: 1px solid #4b4b4b !important;
 }
